Revision history for Perl extension Math::Int128.

0.13
      - silent several compiler warnings (bug report and patch by
        d.thomas@its.uq.edu.au)

0.12  Jul 19, 2013
      - improve gcc version detection (bug report by
        d.thomas@its.uq.edu.au)
      - experimental support for clang compiler added

0.11  Jul 18, 2013
      - fix >>= operator (patch by Dave Rolsky)
      - more and better tests (patch by Dave Rolsky)
      - easy compilation of the git version

0.10  Jul 17, 2013
      - add support for exponentiation (bug report by Dave Rolsky)

0.09  Jul 11, 2013
      - operator <<= was broken for unsigned 128bit numbers (bug
        report by Dave Rolsky)

0.08_01
      - include stdint.h for 64bit integer definitions (bug report and
        solution by Sisyphus)

0.07  Dec 10, 2012
      - rerelease as stable

0.06_07  Nov 5, 2012
      - gcc version detection was to picky (bug report by Peter John
        Acklam)
      - int128_to_net and uint128_to_net were broken
      - add tests addapted from Math::Int64 module
      - mark internal representation of int128 wrappers as readonly in
        order to disallow their modification from outside the module

0.06_06  Jul 20, 2012
      - update Math::Int64 C API support files

0.06_05  Jul 19, 2012
      - stash caching code was broken on non threaded perls
      - several errors on C API corrected

0.06_04  Jul 17, 2012
      - add support for C API
      - stash caching handling was broken on threaded perls
      - improve die_on_overflow handling

0.06_03  Jan 11, 2012
      - add die_on_overflow feature
      - add support for int64_t integers via Math::Int64 
      
0.05  Apr 24, 2011
      - support for gcc 4.4 and 4.5 contributed by KMX

0.04  Mar 8, 2011
      - delete generated Makefile when aborting Makefile.PL

0.03  Mar 4, 2011
      - abort Makefile.PL unless compiler is GCC 4.6 or better

0.02  Feb 14, 2011
      - add new set of operations that use one argument for output for